--- a/movies.html
+++ b/movies.html
@@ -43,82 +43,82 @@
         <div class="cc">
             <img src="mad.jpg" alt="mad" width="200px" height="300px" loading="lazy">
             <br>
-            <p class="p3">Mad</p>
+            <a href="mad.html"><p class="p3">Mad</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="jawan.jpg" alt="jawan" width="200px" height="300px" loading="lazy">
-            <p class="p3">Jawan</p>
+            <a href="jawan.html"><p class="p3">Jawan</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="mm.jpg" alt="month of madhu" width="200px" height="300px" loading="lazy">
-            <p class="p3">Month of Madhu</p>
+            <a href="month of madhu.html"><p class="p3">Month of Madhu</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="skanda.jpg" alt="skanda" width="200px" height="300px" loading="lazy">
-            <p class="p3">Skanda</p>
+            <a href="skanda.html"><p class="p3">Skanda</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="peddakapu1.jpg" alt="peddakpu" width="200px" height="300px" loading="lazy">
-            <p class="p3">Peddakapu 1</p>
+            <a href="peddakapu1.html"><p class="p3">Peddakapu 1</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="god.jpg" alt="god" width="200px" height="300px" loading="lazy">
-            <p class="p3">God</p>
+            <a href="god.html"><p class="p3">God</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="chandramukhi2.jpg" alt="chandramukhi2" width="200px" height="300px" loading="lazy">
-            <p class="p3">Chandramukhi 2</p>
+            <a href="chandramukhi2.html"><p class="p3">Chandramukhi 2</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="premavimanam.jpeg" alt="premavimanam" width="200px" height="300px" loading="lazy">
-            <p class="p3">Prema Vimanam</p>
+            <a href="premavimanam.html"><p class="p3">Prema Vimanam</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="mamamaschindra.jpeg" alt="mamamaschindra" width="200px" height="300px" loading="lazy">
-            <p class="p3">Mama Maschindra</p>
+            <a href="mama maschindra.html"><p class="p3">Mama Maschindra</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="mssmrp.jpeg" alt="mssmrp" width="200px" height="300px" loading="lazy">
-            <p class="p3">Miss Shetty Mr Polishetty</p>
+            <a href="msmp.html"><p class="p3">Miss Shetty Mr Polishetty</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="kumarisrimathi.jpeg" alt="ksm" width="200px" height="300px" loading="lazy">
-            <p class="p3">Kumari Srimathi</p>
+            <a href="kumari srimathi.html"><p class="p3">Kumari Srimathi</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="kushi.jpeg" alt="kushi" width="200px" height="300px" loading="lazy">
-            <p class="p3">Kushi</p>
+            <a href="kushi.html"><p class="p3">Kushi</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="kok.jpeg" alt="kok" width="200px" height="300px" loading="lazy">
-            <p class="p3">King of Kotha</p>
+            <a href="king of kotha.html"><p class="p3">King of Kotha</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="Bhola_Shankar.jpg" alt="bholashankar" width="200px" height="300px" loading="lazy">
-            <p class="p3">Bhola Shankar</p>
+            <a href="bhola shankar.html"><p class="p3">Bhola Shankar</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="adhipurush.jpeg" alt="adhipurush" width="200px" height="300px" loading="lazy">
-            <p class="p3">Adhipurush</p>
+            <a href="adhipurush.html"><p class="p3">Adhipurush</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
             <img src="jailer.jpeg" alt="Jailer" width="200px" height="300px" loading="lazy">
-            <p class="p3">jailer</p>
+            <a href="jailer.html"><p class="p3">jailer</p></a>
             <p class="p4">2023</p>
         </div>
         <div class="cc">
@@ -128,7 +128,7 @@
         </div>
         <div class="cc">
             <img src="bro.jpeg" alt="Bro" width="200px" height="300px" loading="lazy">
-            <p class="p3">Bro</p>
+            <a href="bro.html"><p class="p3">Bro</p></a>
             <p class="p4">2023</p>
         </div>
     </div>
@@ -148,34 +148,48 @@
     <div class="pc2">
     <div class="cc2">
             <img src="Iron_Man.jpg" alt="ironman" width="200px" height="300px" loading="lazy">
-            <p class="p3">Iron Man 1</p>
+            <a href="iron man1.html"><p class="p3">Iron Man 1</p></a>
             <p class="p4">2008</p>
         </div>
         <div class="cc">
             <img src="iron man2.jpeg" alt="iron man2" width="200px" height="300px" loading="lazy">
-            <p class="p3">Iron Man 2</p>
+            <a href="iron man 2.html"><p class="p3">Iron Man 2</p></a>
             <p class="p4">2010</p>
         </div>
         <div class="cc">
             <img src="captain marvel.jpeg" alt="captain marvel" width="200px" height="300px" loading="lazy">
-            <p class="p3">Captain Marvel</p>
+            <a href="captain america.html"><p class="p3">Captain Marvel</p></a>
             <p class="p4">2019</p>
         </div>
         <div class="cc">
             <img src="infinity war.jpeg" alt="infinity war" width="200px" height="300px" loading="lazy">
-            <p class="p3">Infinity War</p>
+            <a href="infinity war.html"><p class="p3">Infinity War</p></a>
             <p class="p4">2018</p>
         </div>
         <div class="cc">
             <img src="end game.jpeg" alt="end game" width="200px" height="300px" loading="lazy">
-            <p class="p3">End Game</p>
+            <a href="end game.html"><p class="p3">End Game</p></a>
             <p class="p4">2019</p>
         </div>
         <div class="cc">
             <img src="captain america.jpeg" alt="captain america" width="200px" height="300px" loading="lazy">
-            <p class="p3">Captain America : TFA</p>
+            <a href="captain america tfa.html"><p class="p3">Captain America : TFA</p></a>
             <p class="p4">2011</p>
         </div>
         </div>
+
+        <footer>
+            <div class="fcontainer">
+                <p class="ppp">Contact </p> 
+                <p class="ppp2">|</p>
+                <div class="m1"><i class="fa-solid fa-user"></i><a href="mailto:sukeshthatipalli@gmail.com">Sukesh Gupta</a></div>
+                        <p class="and">||</p>
+                    <div class="m2">
+                    <i class="fa-solid fa-user"></i><a href="mailto:narsingsanjay35@gmail.com">Sanjay Naring</a></div>
+
+                    <p class="ppp3">&copy;</p>
+                    <p class="ppp4">Sprint Tech</p>
+            </div>
+        </footer>
 </body>
 </html>
